--- a/src/app/_assets/globals.css
+++ b/src/app/_assets/globals.css
@@ -15,7 +15,18 @@ body {
 }
 
 body {
-  background: var(--tg-theme-secondary-bg-color, #d2691e);
+  background:
+    radial-gradient(
+      at 118% 95%,
+      rgba(255, 161, 10, 0) 0%,
+      rgba(0, 0, 0, 0.2) 100%
+    ),
+    radial-gradient(
+      at 18% 28%,
+      rgba(255, 9, 9, 0) 0%,
+      rgba(255, 0, 0, 0.2) 100%
+    ),
+    radial-gradient(at 58% 9%, #886403 0%, #000000 100%);
   font-family:
     -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
